--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 							<tr>
 								<td>
 									<img src="img/people.png">
-									<p>John Doe</p>
+									<p> Doe</p>
 								</td>
 								<td>01-10-2021</td>
 								<td><span class="status pending">Pending</span></td>
