--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			<li>
 				<a href="#">
 					<i class='bx bxs-doughnut-chart' ></i>
-					<span class="text">Analy</span>
+					<span class="text">Analytics</span>
 				</a>
 			</li>
 			<li>
